[Add] is_typing feature establish

--- a/templates/admin/chat.html
+++ b/templates/admin/chat.html
@@ -35,7 +35,7 @@
 								</div>
 								<div class="float-left align-item-center">
 									<a href=""><span class="text-dark">{{chat_users.username}}</span> <!-- <i class="typing-text">Typing...</i>--></a>
-									<span class="last-seen">{{chat_users.department}} | {{chat_users.designation}} | {{chat_users.technology}}</span>
+									<span class="last-seen"><span class="mr-2">{{chat_users.department}} | {{chat_users.designation}} | {{chat_users.technology}}</span></span>
 <!--									<span class="last-seen">Last seen today at 7:50 AM ||| {{ room_name|json_script:"room-name" }}</span>-->
 								</div>
 							</div>
@@ -744,7 +744,12 @@
 		let datetime = d.toLocaleString('en-US', options);
 
     	const sender_user = "{{sender.id}}";
+    	const receiver_user = "{{chat_users.id}}";
         const data = JSON.parse(e.data);
+
+        console.log(sender_user);
+		console.log(data.sender);
+
 		if(data.msg_type === 'MESSAGES'){
 			if (sender_user == data.sender){
 				document.querySelector(".chat-log").innerHTML += "<div class='text-right my-1 d-flex justify-content-end'><div class='border pl-3 pr-1 pt-1 mr-1 rounded' style='background-color:#F6F4F4;'><div>" +data.message+"</div><div class='h6 m-0 text-muted'>"+datetime +"</div></div><div><img class='avatar' src='{{sender.avatar.url}}'></div></div>";
@@ -753,7 +758,17 @@
 			}
 		}
 		else if(data.msg_type === 'IS_TYPING'){
-			document.querySelector(".last-seen").innerHTML += "<i class="typing-text">Typing...</i>";
+			if (sender_user == data.sender){
+				document.querySelector(".last-seen").innerHTML += "";
+			}else{
+				document.querySelector(".last-seen").innerHTML += "<i class='typing-text' id='isTyping'>Typing...</i>";
+			}
+		}
+		else if(data.msg_type === 'NOT_TYPING'){
+			var isTypingElement = document.getElementById('isTyping');
+				if(isTypingElement) {
+					isTypingElement.remove();
+				}
 		}
     };
 
@@ -776,6 +791,38 @@
         }
     };
 
+    window.onload = function () {
+		var isTyping = false;
+		var isNotTyping;
+		document.querySelector('.chat-message-input').onkeypress = () => {
+			sendIsTypingToUser()
+			if (isNotTyping != undefined) clearTimeout(isNotTyping);
+			isNotTyping = setTimeout(sendIsNotTyping, 500);
+		};
+		function sendIsTypingToUser() {
+			if(!isTyping){
+				chatSocket.send(JSON.stringify({
+					'sender': '{{request.user.id}}',
+					'receiver_user': '{{chat_users.id}}',
+					'room_name': room_name,
+					'msg_type': 'IS_TYPING',
+					'message': '',
+				}));
+				isTyping = true
+			}
+		}
+		function sendIsNotTyping() {
+			chatSocket.send(JSON.stringify({
+				'sender': '{{request.user.id}}',
+				'receiver_user': '{{chat_users.id}}',
+				'room_name': room_name,
+				'msg_type': 'NOT_TYPING',
+				'message': '',
+			}));
+			isTyping = false
+		}
+	};
+
     document.querySelector(".chat-message-submit").onclick = function (e) {
         const messageInputDom = document.querySelector(".chat-message-input");
         const message = messageInputDom.value;
@@ -783,6 +830,7 @@
         	'message': message,
 			'room_name': room_name,
 			'sender': '{{request.user.id}}',
+			'receiver_user': '{{chat_users.id}}',
 			'msg_type': 'MESSAGES',
 		}));
         messageInputDom.value = "";
